{
    "name": "InputKeyControl",
    "maps": [
        {
            "name": "Player",
            "id": "a202b5c0-8843-484e-8663-40e750d53c90",
            "actions": [
                {
                    "name": "LightAttack",
                    "type": "Button",
                    "id": "a6fff862-0cac-4236-9b26-2e9158e82c86",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Move",
                    "type": "PassThrough",
                    "id": "4ac140a6-e03c-4f8a-9cf6-0e841b432dbc",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "8bbb897d-d5b9-4898-84a1-fe233b38ff2a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Crouch",
                    "type": "Value",
                    "id": "55253e40-6565-4b1c-b017-a1bc72571dd3",
                    "expectedControlType": "Axis",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "HeavyAttack",
                    "type": "Button",
                    "id": "f6200509-5cd2-4c6c-af87-88e46afd4194",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MediumAttack",
                    "type": "Button",
                    "id": "2b1728c5-09c2-4db0-ae90-21dd8bf09a93",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "3122f22c-9831-4fda-a8b3-ef8e54f153e2",
                    "path": "<Keyboard>/j",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "LightAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "1D Axis",
                    "id": "6823d8cd-ab95-44a3-b72e-c5f91cdfacf1",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "141008ee-1f33-4b48-9158-0858e0b6a8d7",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "76bbae53-0172-4d1f-aca1-8cf6b517f42e",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "653e6a76-2093-4ab9-9d76-dcdd583253bc",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "f2507558-1627-4c27-b125-98e45148a77b",
                    "path": "<Keyboard>/s",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Crouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5bfd0d4f-d9a7-4d81-9cf4-2485e7d21fdc",
                    "path": "<Keyboard>/l",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "HeavyAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "33398de2-5f4b-486a-991c-11c931fe466d",
                    "path": "<Keyboard>/k",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MediumAttack",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}